[package]
name = "piece"
description = "A collection of composable allocators"
authors = ["Guilherme Neubaner <guilherme.neubaner@gmail.com>"]
version = "0.1.3"
edition = "2021"
license = "MIT"

readme = "README.md"
repository = "https://github.com/neubaner/piece"

keywords = ["allocator", "allocators"]
categories = ["memory-management", "no-std"]

[dependencies]
